Search Box Fixed and Image Alignment Fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -62,6 +62,17 @@ td {
     border-radius: 50%;
 }
 
-.carousel a {
+/* .carousel a {
     margin: 0 auto;
+} */
+
+.carousel-item a {
+    width: 100%;
+    display: block;
+    text-align: center;
 }
+
+/* .carousel-item a > img {
+    margin-left: auto;
+    margin-right: auto;
+} */
